# multi_target_kf

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md  package.xml
config/: kf_param.yaml  kf_param_accel.yaml  kf_param_ukf.yaml  kf_param_vel.yaml  kf_params.yaml  tracker_visualization.rviz
include/multi_target_kf/: base_model.h  constant_accel.h  constant_acceleration.h  constant_vel.h  coordinated_turn.h  dubins_model.h  hungarian.h  hungarian2.h  kf_tracker.h  model_factory.h  models.h  motion_model.h  structs.h  tracker_config.h  tracker_ros.h  tracker_ros_test.h  ukf_adaptive_accel.h
launch/: kf_const_accel.launch.py  kf_const_ukf.launch.py  kf_const_vel.launch.py  kf_rviz.launch.py  kf_tracker.launch  modular_kf.launch.py
msg/: Detection.msg  Detections.msg  KFTrack.msg  KFTracks.msg
scripts/: simulate_circle.py
src/: hungarian.cpp  hungarian2.cpp  kf_tracker.cpp  kf_tracker_node.cpp  tracker_node.cpp  tracker_ros.cpp
test/: test_motion_models.cpp
tests/: test_hungarian.cpp  test_hungarian2.cpp
